syntax = "proto3";

package com.example.ajaxonboardingproject;

import "com/example/ajaxonboardingproject/movie_session.proto";

service MovieSessionService {
  rpc add_movie_session (MovieSessionAddRequest) returns (MovieSessionResponse);

  rpc update_movie_session (MovieSessionUpdateRequest) returns (MovieSessionResponse);

  rpc delete_movie_session (MovieSessionDeleteRequest) returns (MovieSessionResponse);
}
